# PixelClock-FW

./: .clang-format  CMakeLists.txt  build-helper.py  platformio.ini  readme.md
cmake/: ArduinoFFT.cmake  Button2.cmake  ETL.cmake  FMT.cmake  FastLED.cmake  SFML.cmake  googletest.cmake
include/: EMA.h  FMTWrapper.h  audio.h  audioDesktop.h  audioESP32.h  brightnessSensor.h  instrumentation.h  loopTimeManager.h  modes.h  pinout.h  timekeeping.h  utility.h
include/audio/: ESP32.h  audio.h  desktop.h
include/display/: canvas.h  characters.h  diagnostic.h  display.h  displayEffects.h  dummydisplay.h  pixeldisplay.h
include/display/effects/: audiowaterfall.h  bouncingball.h  clockfaces.h  effect.h  filters.h  gameoflife.h  gravity.h  gravityfill.h  randomfill.h  spectrumdisplay.h  textscroller.h  utilities.h  volumedisplay.h  volumegraph.h
include/modes/: clockface.h  effects.h  modes.h  settings.h
include/utility/: sfml.h
lib/FastLEDMath/: CMakeLists.txt  readme.md
lib/FastLEDMath/include/: flm_color.h  flm_hsv2rgb.h  flm_lib8tion.h  flm_pixeltypes.h
lib/FastLEDMath/include/lib8tion/: flm_math8.h  flm_random8.h  flm_scale8.h  flm_trig8.h
lib/FastLEDMath/src/: flm_hsv2rgb.cpp  flm_lib8tion.cpp
lib/display/include/: canvas.h  p_color.h  p_hsv2rgb.h  p_lib8tion.h  p_pixeltypes.h  sfml_util.h
lib/display/include/lib8tion/: p_math8.h
lib/display/src/: canvas.cpp  p_hsv2rgb.cpp  p_lib8tion.cpp
lib_desktop/ArduinoStub/: CMakeLists.txt
lib_desktop/ArduinoStub/include/: Arduino.h  ArduinoN.h  Print.h  WString.h
lib_desktop/ArduinoStub/src/: Print.cpp  WString.cpp  stdlib_noniso.c
src/: audio.cpp  audio.h  audioDesktop.cpp  audioESP32.cpp  audiofft.cpp  audiofft.h  brightnessSensor.cpp  brightnessSensor.h  characters.h  display.cpp  display.h  displayEffects.cpp  displayEffects.h  fastled_rgbw.h  input.cpp  input.h  instrumentation.cpp  instrumentation.h  loopTimeManager.cpp  main.cpp  main_desktop.cpp  modes.cpp  modes.h  pinout.h  serialCommands.cpp  serialCommands.h  timekeeping.cpp  timekeeping.h  utility.cpp  utility.h
src/audio/: ESP32.cpp  audio.cpp  desktop.cpp
src/display/: canvas.cpp  characters.h  diagnostic.cpp  display.cpp  display.h  displayEffects.cpp  displayEffects.h  fastled_rgbw.h  gameOfLife.cpp  gameOfLife.h  pixeldisplay.cpp
src/display/effects/: audiowaterfall.cpp  bouncingball.cpp  clockfaces.cpp  filters.cpp  gameoflife.cpp  gravity.cpp  gravityfill.cpp  randomfill.cpp  spectrumdisplay.cpp  textscroller.cpp  utilities.cpp  volumedisplay.cpp  volumegraph.cpp
src/modes/: clockface.cpp  effects.cpp  modes.cpp  settings.cpp
src_desktop/: main_desktop.cpp
test/: test_canvas.cpp
